--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
         <img src="./images/header__logo.svg" alt="лого" class="header__logo">
         <div class="header__links-container">
-            <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
-            <a href="#" class="header__lang-link">En</a>
+            <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
+            <a href="#" class="header__lang-link link">En</a>
         </div>
     </header>
     <main class="content">
