--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                 родной
                 стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <div class="intro__list">
-                Часовых поясов <span class="intro__span">11</span> <br>
-                Объектов природного наследия ЮНЕСКО <span class="intro__span">12</span> <br>
-                Объектов культурного наследия ЮНЕСКО <span class="intro__span">16</span> <br>
-                Природных заповедников <span class="intro__span">105</span> <br>
-                Аэропортов <span class="intro__span">241</span> <br>
+                <p class="intro__line">Часовых поясов <span class="intro__span">11</span></p>
+                <p class="intro__line">Объектов природного наследия ЮНЕСКО <span class="intro__span">12</span> </p>
+                <p class="intro__line">Объектов культурного наследия ЮНЕСКО <span class="intro__span">16</span></p>
+                <p class="intro__line"> Природных заповедников <span class="intro__span">105</span> </p>
+                <p class="intro__line"> Аэропортов <span class="intro__span">241</span> </p>
             </div>
         </section>
         <section class="photo-grid">
