--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="footer__links">
+        <nav class="footer__links">
             <a href="https://yandex.ru/maps" class="footer__link link">Карты</a>
             <a href="https://yandex.ru/pogoda" class="footer__link link">Погода</a>
             <a href="https://rasp.yandex.ru" class="footer__link link">Расписание</a>
             <a href="https://calendar.yandex.ru" class="footer__link link">Календарь</a>
             <a href="https://travel.yandex.ru" class="footer__link link">Путешествия</a>
-        </div>
-        <div class="footer__copyright">© 2023 Афанасьев Даниил</div>
+        </nav>
+        <p class="footer__copyright">© 2023 Афанасьев Даниил</p>
     </footer>
 
 </body>
